--- a/config/site.yml
+++ b/config/site.yml
@@ -2,3 +2,6 @@ title: Example page
 url: 'http://www.example.org'
 email: example@example.org
 schemas: []
+author: 
+  name: John Appleseed
+  email: example@example.org
